@@ -1,3 +1,8 @@
+March 8 2012 18:01
+    -Removed mouse control for p1
+    -Removed winsound from import list
+    -PREV UNDOC: Changed from winsound.beep to sys.stdout.write(chr(7))
+
 March 8 2012 17:59
     -Changed replay to be in a separate function.  Kept score reset in the game
      loop, would not maintain value across function call otherwise (bug?)
